--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "generator-donejs",
+  "name": "generator-donejs-component",
   "version": "0.10.0-pre.4",
   "description": "A generator for your DoneJS application",
   "homepage": "http://donejs.com/",
